--- a/data/io.github.gaheldev.Millisecond.desktop.in
+++ b/data/io.github.gaheldev.Millisecond.desktop.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
-Name=proaudio-setup
-Exec=proaudio-setup
-Icon=io.github.gaheldev.ProAudioSetup
+Name=Millisecond
+Exec=millisecond
+Icon=io.github.gaheldev.Millisecond
 Terminal=false
 Type=Application
 Categories=Utility;
