--- a/data/io.github.gaheldev.Millisecond.metainfo.xml.in
+++ b/data/io.github.gaheldev.Millisecond.metainfo.xml.in
@@ -15,23 +15,23 @@
   </developer>
 
   <!-- Requered: Should be a link to the upstream homepage for the component -->
-  <url type="homepage">https://example.org/</url>
+  <url type="homepage">https://github.com/gaheldev/Millisecond</url>
   <!-- Recommended: It is highly recommended for open-source projects to display the source code repository -->
-  <url type="vcs-browser">https://example.org/repository</url>
+  <url type="vcs-browser">https://github.com/gaheldev/Millisecond</url>
   <!-- Should point to the software's bug tracking system, for users to report new bugs -->
-  <url type="bugtracker">https://example.org/issues</url>
+  <url type="bugtracker">https://github.com/gaheldev/Millisecond/issues</url>
   <!-- Should link a FAQ page for this software, to answer some of the most-asked questions in detail -->
   <!-- URLs of this type should point to a webpage where users can submit or modify translations of the upstream project -->
-  <url type="translate">https://example.org/translate</url>
-  <url type="faq">https://example.org/faq</url>
+  <!-- <url type="translate">https://example.org/translate</url> -->
+  <!-- <url type="faq">https://example.org/faq</url> -->
   <!--Sould provide a web link to an online user's reference, a software manual or help page -->
-  <url type="help">https://example.org/help</url>
+  <url type="help">https://github.com/gaheldev/Millisecond</url>
   <!-- URLs of this type should point to a webpage showing information on how to donate to the described software project -->
-  <url type="donation">https://example.org/donate</url>
+  <!-- <url type="donation">https://example.org/donate</url> -->
   <!--This could for example be an HTTPS URL to an online form or a page describing how to contact the developer -->
-  <url type="contact">https://example.org/contact</url>
+  <!-- <url type="contact">https://example.org/contact</url> -->
   <!--URLs of this type should point to a webpage showing information on how to contribute to the described software project -->
-  <url type="contribute">https://example.org/contribute</url>
+  <!-- <url type="contribute">https://example.org/contribute</url> -->
 
   <translation type="gettext">millisecond</translation>
   <!-- All graphical applications having a desktop file must have this tag in the MetaInfo.
@@ -42,8 +42,8 @@
 
   <!-- Applications should set a brand color in both light and dark variants like so -->
   <branding>
-    <color type="primary" scheme_preference="light">#ff00ff</color>
-    <color type="primary" scheme_preference="dark">#993d3d</color>
+    <color type="primary" scheme_preference="light">#5bd61d</color>
+    <color type="primary" scheme_preference="dark">#8e3b3d</color>
   </branding>
 
   <screenshots>
