--- a/data/io.github.gaheldev.Millisecond.metainfo.xml.in
+++ b/data/io.github.gaheldev.Millisecond.metainfo.xml.in
@@ -5,7 +5,7 @@
   <project_license>GPL-3.0-or-later</project_license>
 
   <name>Millisecond</name>
-  <summary>Optimize your system for low latency audio</summary>
+  <summary>Optimize for low latency</summary>
   <description>
     <p>No description</p>
   </description>
