--- a/data/io.github.gaheldev.Millisecond.metainfo.xml.in
+++ b/data/io.github.gaheldev.Millisecond.metainfo.xml.in
@@ -7,7 +7,8 @@
   <name>Millisecond</name>
   <summary>Optimize for low latency</summary>
   <description>
-    <p>No description</p>
+      <p> Millisecond is a gtk app based on rtcqs. It provides system diagnostics and offers tips to improve low latency performance for audio production, with links to detailed documentation from linuxaudio wiki.
+      </p>
   </description>
 
   <developer id="tld.vendor">
@@ -48,22 +49,33 @@
 
   <screenshots>
     <screenshot type="default">
-      <image>https://example.org/example1.png</image>
-      <caption>A caption</caption>
+      <image>https://github.com/gaheldev/Millisecond/blob/main/data/screenshots/dark.png?raw=true</image>
+      <caption>Main window in dark mode</caption>
     </screenshot>
     <screenshot>
-      <image>https://example.org/example2.png</image>
-      <caption>A caption</caption>
+      <image>https://github.com/gaheldev/Millisecond/blob/main/data/screenshots/light_diagnostic.png?raw=true</image>
+      <caption>Main window showing diagnostics in light mode</caption>
+    </screenshot>
+    <screenshot>
+      <image>https://github.com/gaheldev/Millisecond/blob/main/data/screenshots/dark_diagnostic.png?raw=true</image>
+      <caption>Main window showing diagnostics in dark mode</caption>
     </screenshot>
   </screenshots>
 
   <releases>
-    <release version="1.0.1" date="2024-01-18">
-      <url type="details">https://example.org/changelog.html#version_1.0.1</url>
+    <release version="0.1.1" date="2025-05-22">
       <description translate="no">
         <p>Release description</p>
         <ul>
-          <li>automatic release</li>
+          <li>Hide optimizations that could cause security risks by default</li>
+        </ul>
+      </description>
+    </release>
+    <release version="0.1.0" date="2025-05-21">
+      <description translate="no">
+        <p>Release description</p>
+        <ul>
+          <li>initial release</li>
         </ul>
       </description>
     </release>
