Change wiki icon to external-link-symbolic

--- a/data/icons/meson.build
+++ b/data/icons/meson.build
@@ -11,3 +11,8 @@ install_data(
   symbolic_dir / ('@0@-symbolic.svg').format(application_id),
   install_dir: get_option('datadir') / 'icons' / symbolic_dir
 )
+
+install_data(
+    'external-link-symbolic.svg',
+    install_dir: get_option('datadir') / 'icons/hicolor/scalable/actions'
+)
